6_prometheus_grafana/grafana-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - grafana.gcp.f5demos.ch
    secretName: default-server-secret-monitoring
  rules:
  - host: grafana.gcp.f5demos.ch
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000
